# bnikTEST

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
bnik/: CMakeLists.txt  Config.cmake.in  MySillyTest.cpp  bnik.cpp  bnik.h  common_defs.hpp  config.hpp  dstring.hpp  dstring.ixx  foil.inl
cmake/: BnikCxxCompilerSupportTesting.cmake  FindLibCxx.cmake  FindMicrosoftStl.cmake  StandaloneCxxStdLib.cmake
cmake/trycompile/: CanMarkAllMembersConstexpr.cpp  can_build_cxx_modules.ixx
test/: CMakeLists.txt  DString.Constexprness02.cpp  Dstring.CapacityLimits01.cpp  Dstring.Constexprness01.cpp  Dstring.DestructorBehavior01.cpp  Dstring.Iterators01.cpp  DummyProg.cpp  TestHelpers.inl  bnik.Test.Helpers.hpp  bnik.Test.Helpers.ixx  foil2.h  test01.cpp  test02.cpp
test/utils/: IteratorTestHelpters.h  bnik.Test.Utils-IteratorTestHelpers.ixx  bnik.Test.Utils.ixx  utils.h
